# sc-server

./: .clang-format  CMakeLists.txt
cmake/: zynq7000-toolchain.cmake
inc/: socketcan.h
src/: CMakeLists.txt  server.cpp  socketcan.cpp
